doc(swagger): optimize doc api
