# course/controller.go
@@ -10,11 +10,11 @@ var courseService = NewCourseService(NewCourseRepository())
 
 // GetCourses gets all courses
 // @Summary Get all courses
-// @Tags course
+// @Tags Courses
 // @Produce json
 // @Success 200 {array} course.Model
 // @Failure 500 {object} utils.AppError
-// @Router /courses [get]
+// @Router /v1/courses [get]
 func GetCourses(c *gin.Context) {
 	courses, err := courseService.GetAllCourses()
 	if err != nil {
@@ -26,14 +26,14 @@ func GetCourses(c *gin.Context) {
 
 // CreateCourse creates a new course
 // @Summary Create a new course
-// @Tags course
+// @Tags Courses
 // @Accept json
 // @Produce json
 // @Param course body course.Model true "Course"
 // @Success 201 {object} course.Model
 // @Failure 400 {object} utils.AppError
 // @Failure 500 {object} utils.AppError
-// @Router /courses [post]
+// @Router /v1/courses [post]
 func CreateCourse(c *gin.Context) {
 	var course Course
 	if err := c.ShouldBindJSON(&course); err != nil {
@@ -49,7 +49,7 @@ func CreateCourse(c *gin.Context) {
 
 // UpdateCourse updates an existing course by ID
 // @Summary Update a course by ID
-// @Tags course
+// @Tags Courses
 // @Accept json
 // @Produce json
 // @Param id path string true "Course ID"
@@ -57,7 +57,7 @@ func CreateCourse(c *gin.Context) {
 // @Success 200 {object} course.Model
 // @Failure 400 {object} utils.AppError
 // @Failure 500 {object} utils.AppError
-// @Router /courses/{id} [patch]
+// @Router /v1/courses/{id} [patch]
 func UpdateCourse(c *gin.Context) {
 	courseID := c.Param("id")
 	var course Course
@@ -76,12 +76,12 @@ func UpdateCourse(c *gin.Context) {
 
 // DeleteCourse deletes a course by ID
 // @Summary Delete a course by ID
-// @Tags course
+// @Tags Courses
 // @Param id path string true "Course ID"
 // @Success 204 "No Content"
 // @Failure 400 {object} utils.AppError
 // @Failure 500 {object} utils.AppError
-// @Router /courses/{id} [delete]
+// @Router /v1/courses/{id} [delete]
 func DeleteCourse(c *gin.Context) {
 	courseID := c.Param("id")
 	if err := courseService.DeleteCourse(courseID); err != nil {
@@ -93,13 +93,13 @@ func DeleteCourse(c *gin.Context) {
 
 // GetCourseByID gets a course by ID
 // @Summary Get a course by ID
-// @Tags course
+// @Tags Courses
 // @Produce json
 // @Param id path string true "Course ID"
 // @Success 200 {object} course.Model
 // @Failure 400 {object} utils.AppError
 // @Failure 500 {object} utils.AppError
-// @Router /courses/{id} [get]
+// @Router /v1/courses/{id} [get]
 func GetCourseByID(c *gin.Context) {
 	id := c.Param("id")
 	course, err := courseService.GetCourseByID(id)
