# docs/swagger.json
@@ -9,13 +9,13 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/courses": {
+        "/v1/courses": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "course"
+                    "Courses"
                 ],
                 "summary": "Get all courses",
                 "responses": {
@@ -44,7 +44,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "course"
+                    "Courses"
                 ],
                 "summary": "Create a new course",
                 "parameters": [
@@ -80,13 +80,13 @@
                 }
             }
         },
-        "/courses/{id}": {
+        "/v1/courses/{id}": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "course"
+                    "Courses"
                 ],
                 "summary": "Get a course by ID",
                 "parameters": [
@@ -121,7 +121,7 @@
             },
             "delete": {
                 "tags": [
-                    "course"
+                    "Courses"
                 ],
                 "summary": "Delete a course by ID",
                 "parameters": [
@@ -159,7 +159,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "course"
+                    "Courses"
                 ],
                 "summary": "Update a course by ID",
                 "parameters": [
@@ -202,14 +202,14 @@
                 }
             }
         },
-        "/golfs": {
+        "/v1/golfs": {
             "get": {
                 "description": "Get all golfs",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "golf"
+                    "Golfs"
                 ],
                 "summary": "Get all golfs",
                 "responses": {
@@ -239,7 +239,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "golf"
+                    "Golfs"
                 ],
                 "summary": "Create a new golf",
                 "parameters": [
@@ -275,14 +275,14 @@
                 }
             }
         },
-        "/golfs/{id}": {
+        "/v1/golfs/{id}": {
             "get": {
                 "description": "Get a golf by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "golf"
+                    "Golfs"
                 ],
                 "summary": "Get a golf by ID",
                 "parameters": [
@@ -318,7 +318,7 @@
             "delete": {
                 "description": "Delete an existing golf by ID",
                 "tags": [
-                    "golf"
+                    "Golfs"
                 ],
                 "summary": "Delete an existing golf",
                 "parameters": [
@@ -357,7 +357,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "golf"
+                    "Golfs"
                 ],
                 "summary": "Update an existing golf",
                 "parameters": [
@@ -439,7 +439,7 @@
             }
         },
         "Golf": {
-            "description": "Model for a golf course",
+            "description": "Model for a golf",
             "type": "object",
             "properties": {
                 "city": {
